@@ -1,2 +1,10 @@
+Release ...
+* The "yyin" and "yyout" file descriptors now point to "stdin" and "stdout"
+  when calling main() as it has been historically the case on Unix systems.
+  This requires the use of non-standard compiler features and currently
+  only works with gcc, Sun C, and HP ANSI C. Otherwise, these descriptors
+  are initialized at the first call to yylex(), as it had been the case with
+  the previous release.
+
 Release 051113
 * Initial release.
